# static_avoidance

./: CMakeLists.txt  README.md  package.xml
launch/: static_avoidance_main.launch
msg/: StaticControl.msg
scripts/: pub.py  static_avoidance_main.py  static_avoidance_preliminary.py
